Fix list item alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,6 @@ header h1 {
     background-color: #4a4e69;
     color: white;
 }
+li {
+    text-align: left;
+}
